--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
    "dependencies": {
     "express": "^4.17.1",
     "cors": "^2.8.5",
-    "uuid": "^8.3.2"
+    "mongoose": "^6.0.4"
   },
   "author": "",
   "license": "ISC"
