--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server2.js"
   },
-   "dependencies": {
+  "dependencies": {
     "express": "^4.17.1",
     "cors": "^2.8.5",
     "mongoose": "^6.0.4",
-     "redis": "^4.0.0",
+    "redis": "^4.0.0"
   },
   "author": "",
   "license": "ISC"
